<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="#000000"
    android:backgroundTint="#D3F6CB"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".gui.PlayAnimationActivity">


    <LinearLayout
        android:id="@+id/tempMazeBckgd"
        android:layout_width="388dp"
        android:layout_height="298dp"
        android:background="#717171"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/polygonRow"
            android:layout_width="match_parent"
            android:layout_height="231dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/greenPolygon"
                android:layout_width="169dp"
                android:layout_height="231dp"
                android:contentDescription="@string/temp_bckgd_txt"
                app:srcCompat="@android:drawable/title_bar"
                app:tint="#8BC34A" />

            <ImageView
                android:id="@+id/yellowPolygon"
                android:layout_width="169dp"
                android:layout_height="231dp"
                android:layout_marginStart="35dp"
                android:contentDescription="@string/temp_bckgd_txt"
                app:srcCompat="@android:drawable/title_bar"
                app:tint="#FFEB3B" />


        </LinearLayout>


        <Button
            android:id="@+id/tempRect"
            android:layout_width="fill_parent"
            android:layout_height="62dp"
            android:background="#000000"
            android:contentDescription="@string/temp_bckgd_txt" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/energyBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="384dp"
        android:layout_height="43dp"
        android:layout_below="@id/energyText"
        android:progressBackgroundTint="#304A31"
        android:progressTint="#304A31" />

    <TextView
        android:id="@+id/energyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tempMazeBckgd"
        android:layout_marginTop="10dp"
        android:text="@string/energy_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#304A31"
        android:textStyle="bold" />


    <Button
        android:id="@+id/playButton"
        android:layout_width="165dp"
        android:layout_height="71dp"
        android:layout_below="@id/energyBar"
        android:layout_marginTop="4dp"
        android:background="#304A31"
        android:text="@string/play_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:id="@+id/speedLayout"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/energyBar"
        android:layout_alignEnd="@id/energyBar"
        android:layout_toEndOf="@id/playButton"
        android:backgroundTint="#304A31"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/speedText"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/speed_txt"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#304A31"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/speedBar"
            android:layout_width="165dp"
            android:layout_height="34dp"
            android:max="10"
            android:progress="5"
            android:progressBackgroundTint="#304A31"
            android:progressBackgroundTintMode="src_atop"
            android:progressTint="#304A31"
            android:thumbTint="#304A31" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/showMazeLayout"
        android:layout_width="192dp"
        android:layout_height="95dp"
        android:layout_below="@id/speedLayout"
        android:layout_alignEnd="@id/energyBar"
        android:layout_marginStart="3dp"
        android:layout_toEndOf="@id/playButton"
        android:orientation="vertical">

        <TextView
            android:id="@+id/showMazeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/show_maze_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#304A31"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/mazewidth"
            android:layout_width="74dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:checked="true"
            android:shadowColor="#304A31"
            android:showText="true"
            android:textColor="#00000000"
            android:thumbTint="#304A31"
            app:thumbTintMode="src_in"
            app:trackTint="#304A31" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/showWallsLayout"
        android:layout_width="189dp"
        android:layout_height="98dp"
        android:layout_below="@id/showMazeLayout"
        android:layout_alignEnd="@id/energyBar"
        android:layout_toEndOf="@id/playButton"
        android:orientation="vertical">

        <TextView
            android:id="@+id/showWallsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/show_walls_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#304A31"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/wallSwitch"
            android:layout_width="80dp"
            android:layout_height="69dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:checked="true"
            android:shadowColor="#304A31"
            android:showText="true"
            android:textColor="#00000000"
            android:thumbTint="#304A31"
            app:thumbTintMode="src_in"
            app:trackTint="#304A31" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/showSlnLayout"
        android:layout_width="209dp"
        android:layout_height="93dp"
        android:layout_below="@id/showWallsLayout"
        android:layout_alignEnd="@id/energyBar"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/playButton"
        android:orientation="vertical">

        <TextView
            android:id="@+id/showSlnText"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/show_sln_txt"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#304A31"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/slnSwitch"
            android:layout_width="71dp"
            android:layout_height="68dp"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:shadowColor="#304A31"
            android:showText="true"
            android:textColor="#00000000"
            android:thumbTint="#304A31"
            app:thumbTintMode="src_in"
            app:trackTint="#304A31" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sensorStatusLayout"
        android:layout_width="162dp"
        android:layout_height="281dp"
        android:layout_below="@id/speedLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sensorStatusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sensor_status_txt"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#304A31"
            android:textStyle="bold" />

        <Button
            android:id="@+id/frontSensorStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#304A31"
            android:clickable="false"
            android:text="@string/f_txt" />

        <Button
            android:id="@+id/leftSensorStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#304A31"
            android:clickable="false"
            android:text="@string/l_txt" />

        <Button
            android:id="@+id/rightSensorStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#304A31"
            android:clickable="false"
            android:text="@string/r_txt" />

        <Button
            android:id="@+id/backSensorStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#304A31"
            android:clickable="false"
            android:text="@string/b_txt" />

    </LinearLayout>


</RelativeLayout>