<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#FFFFFF"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".gui.PlayManuallyActivity">


    <edu.wm.cs.cs301.cheyennehwang.gui.MazePanel
        android:id="@+id/tempBckgd"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:id="@+id/sizeLayout"
        android:layout_width="207dp"
        android:layout_height="124dp"
        android:layout_below="@id/tempBckgd"
        android:layout_marginStart="6dp"
        android:layout_marginTop="43dp"
        android:layout_toEndOf="@id/navLayout"
        android:backgroundTint="#304A31"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sizeText"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/change_size_txt"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#304A31"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/incanddecLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/incButton"
                android:layout_width="76dp"
                android:layout_height="62dp"
                android:layout_gravity="left"
                android:layout_marginRight="2dp"
                android:background="#304A31"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/decButton"
                android:layout_width="76dp"
                android:layout_height="62dp"
                android:layout_marginLeft="2dp"
                android:background="#304A31"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/showMazeLayout"
        android:layout_width="189dp"
        android:layout_height="95dp"
        android:layout_below="@id/sizeLayout"
        android:layout_marginStart="3dp"
        android:layout_toRightOf="@id/navLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/showMazeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/show_maze_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#304A31"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/mazewidth"
            android:layout_width="74dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:checked="true"
            android:shadowColor="#304A31"
            android:showText="true"
            android:textColor="#00000000"
            android:thumb="@drawable/small_dust"
            android:thumbTint="#304A31"
            app:thumbTintMode="src_in"
            app:trackTint="#304A31"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/showWallsLayout"
        android:layout_width="197dp"
        android:layout_height="85dp"
        android:layout_below="@id/showMazeLayout"
        android:layout_toRightOf="@id/navLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/showWallsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/show_walls_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#304A31"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/wallSwitch"
            android:layout_width="82dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:checked="true"
            android:shadowColor="#304A31"
            android:showText="true"
            android:textColor="#00000000"
            android:thumb="@drawable/small_dust"
            app:thumbTintMode="src_in"
            app:trackTint="#304A31" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/showSlnLayout"
        android:layout_width="192dp"
        android:layout_height="95dp"
        android:layout_below="@id/showWallsLayout"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@id/navLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/showSlnText"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/show_sln_txt"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#304A31"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/slnSwitch"
            android:layout_width="82dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:shadowColor="#304A31"
            android:showText="true"
            android:textColor="#00000000"
            android:thumb="@drawable/small_dust"
            app:thumbTintMode="src_in"
            app:trackTint="#304A31" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navLayout"
        android:layout_width="182dp"
        android:layout_height="393dp"
        android:layout_below="@id/tempBckgd"
        android:layout_marginTop="42dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/forwardButton"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:background="#304A31"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/forward_txt"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/landrLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/leftButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="82dp"
                android:layout_height="144dp"
                android:layout_marginTop="17dp"
                android:background="#304A31"
                android:text="@string/l_txt"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rightbutton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="82dp"
                android:layout_height="144dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:background="#304A31"
                android:text="@string/r_txt"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/jumpButton"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:layout_marginTop="17dp"
            android:background="#304A31"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/jump_txt"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>